@@ -3,9 +3,46 @@
 #include <ctime>
 #include <cstdio>
 
+
+int game_board::check_tile_neighbors(int x, int y) {
+    int num_bombs = 0;
+    if (in_bounds(x - 1, y - 1) && board[y - 1][x - 1] && board[y - 1][x - 1]->check_if_bomb()) {
+        num_bombs++;
+    }
+    if (in_bounds(x, y - 1)     && board[y - 1][x    ] && board[y - 1][x    ]->check_if_bomb()) {
+        num_bombs++;
+    }
+    if (in_bounds(x + 1, y - 1) && board[y - 1][x + 1] && board[y - 1][x + 1]->check_if_bomb()) {
+        num_bombs++;
+    }
+    if (in_bounds(x - 1, y)     && board[y    ][x - 1] && board[y    ][x - 1]->check_if_bomb()) {
+        num_bombs++;
+    }
+    if (in_bounds(x + 1, y)     && board[y    ][x + 1] && board[y    ][x + 1]->check_if_bomb()) {
+        num_bombs++;
+    }
+    if (in_bounds(x - 1, y + 1) && board[y + 1][x - 1] && board[y + 1][x - 1]->check_if_bomb()) {
+        num_bombs++;
+    }
+    if (in_bounds(x, y + 1)     && board[y + 1][x    ] && board[y + 1][x    ]->check_if_bomb()) {
+        num_bombs++;
+    }
+    if (in_bounds(x + 1, y + 1) && board[y + 1][x + 1] && board[y + 1][x + 1]->check_if_bomb()) {
+        num_bombs++;
+    }
+    return num_bombs;
+}
+
 game_board::game_board(int num_bombs) {
     int x, y;
     int n = 0;
+
+    for (y = 0; y < BOARD_Y; ++y) {
+        for (x = 0; x < BOARD_X; ++x) {
+            board[y][x] = NULL;
+        }
+    }
+    
 
     srand(time(NULL));
 
@@ -13,7 +50,7 @@ game_board::game_board(int num_bombs) {
         x = rand() % BOARD_X;
         y = rand() % BOARD_Y;
         if (!board[y][x]) {
-            board[y][x] = new tile(true);
+            board[y][x] = new tile(true, -1);
             //printf("%d: (%d, %d)\n", n, x, y);
             n++;
         }
@@ -22,7 +59,7 @@ game_board::game_board(int num_bombs) {
     for (y = 0; y < BOARD_Y; ++y) {
         for (x = 0; x < BOARD_X; ++x) {
             if (!board[y][x]) {
-                board[y][x] = new tile(false);
+                board[y][x] = new tile(false, check_tile_neighbors(x, y));
             }
         }
     }
